Fix extra margin in sheets when printing
This extra margin was added to offset sheets in Editor, but it also affects the printig style,
so I had to move the margin to the Editor.css file, as a padding

--- a/src/components/Editor/css/Editor.css
+++ b/src/components/Editor/css/Editor.css
@@ -7,7 +7,7 @@
 body {
   background-color: #48404d;
   font-family: 'Montserrat', sans-serif;
-  padding-top: 10px;
+  padding-top: 80px;
   padding-bottom: 80px;
   font-size: 24px;
 }
