--- a/src/components/Editor/css/SheetsContainer.css
+++ b/src/components/Editor/css/SheetsContainer.css
@@ -10,7 +10,6 @@
   width: 21cm;
   min-height: 29.7cm;
   margin: auto;
-  margin-top: 100px;
   font-family: 'Indie Flower', cursive;
   font-size: 24px;
 }
